modification du fond en CSS pour le faire en dégradé

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,7 @@ height: 100%;
 }
 
 body{
-    background: linear-gradient(180deg, #1E3A8A 0%, #312E81 100%);
+    background: linear-gradient(180deg, #4769c8 0%, #312E81 100%);
 color: #FDFDFD;
 background-size: cover;
     display: flex;
