--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,33 +1,49 @@
-@import url('https://fonts.cdnfonts.com/css/new-walt-disney-font');
- 
+@import url("https://fonts.cdnfonts.com/css/new-walt-disney-font");
+
 html {
-height: 100%;
+  height: 100%;
   margin: 0;
   padding: 0;
 }
 
-body{
-    background: linear-gradient(180deg, #4769c8 0%, #312E81 100%);
-color: #FDFDFD;
-background-size: cover;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+body {
+  background: linear-gradient(180deg, #4769c8 0%, #312e81 100%);
+  color: #fdfdfd;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-    font-family: 'New Walt Disney Font', sans-serif;
-    font-size: 70px;                                      
+  font-family: "New Walt Disney Font", sans-serif;
+  font-size: 70px;
 }
 
 #start-btn {
-    padding: 5px 24px;
-border-radius: 10px;
+  padding: 5px 24px;
+  border-radius: 10px;
 }
 
 #next-btn {
-    padding: 5px 24px;
-border-radius: 10px;
-display: none;
+  padding: 5px 24px;
+  border-radius: 10px;
+}
+
+#answers {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 15% 15%;
+  gap: 10px;
+  padding: 5px;
+}
+
+/* not perfect but it works */
+.visible {
+  display: none !important;
+}
+
+.next-answer {
+  visibility: hidden !important;
 }
