--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.cdnfonts.com/css/new-walt-disney-font");
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 html {
   height: 100%;
@@ -7,13 +8,14 @@ html {
 }
 
 body {
-  background: linear-gradient(180deg, #4769c8 0%, #312e81 100%);
+  background: linear-gradient(180deg, #4787c8 0%, #312d9a 100%);
   color: #fdfdfd;
   background-size: cover;
   display: flex;
   flex-direction: column;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Comic Neue, sans-serif;
+  font-size: larger;
 }
 
 h1 {
@@ -30,11 +32,15 @@ h1 {
 #start-btn {
   padding: 5px 24px;
   border-radius: 10px;
+  font-family: Comic Neue, sans-serif;
+  font-size: medium;
 }
 
 #next-btn {
   padding: 5px 24px;
   border-radius: 10px;
+  font-family: Comic Neue, sans-serif;
+  font-size:medium;
   display: none;
 }
 
@@ -57,9 +63,17 @@ h1 {
   font-size: 15px;
   cursor: pointer;
   transition: all 0.3s;
+  font-family: Comic Neue, sans-serif;
+  font-size:medium;
 }
 .btn:hover {
   background-color: black;
   color: #fff;
 }
 
+footer {
+position: fixed;
+bottom: 0;
+width: 100%;
+font-size: small;
+}
