modif footer en français

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-  background: linear-gradient(180deg, #4787c8 0%, #312d9a 100%);
+  background: linear-gradient(180deg, #4787c8 0%, #232074 100%);
   color: #fdfdfd;
   background-size: cover;
   display: flex;
