--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,19 +8,31 @@ html {
 }
 
 body {
-  background: linear-gradient(180deg, #4787c8 0%, #232074 100%);
   color: #fdfdfd;
   background-size: cover;
   display: flex;
   flex-direction: column;
   text-align: center;
-  font-family: Comic Neue, sans-serif;
-  font-size: larger;
+  background: #fdfdfd;
+  font-family: Helvetica, sans-serif;
 }
 
 h1 {
   font-family: "New Walt Disney Font", sans-serif;
   font-size: 70px;
+  color: black;
+  margin-bottom: 5px;
+}
+
+#quiz {
+  width: 700px;
+  height: 400px;
+  background: linear-gradient(180deg, #4769c8 0%, #312e81 100%);
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  align-self: center;
+  margin-top: 40px;
+  border-radius: 35px;
 }
 
 #actions {
@@ -29,24 +41,67 @@ h1 {
   justify-content: center;
   gap: 10px;
 }
-#start-btn {
-  padding: 5px 24px;
-  border-radius: 10px;
+
+#start-btn, #next-btn {
+  position: relative;
+  height: 45px;
+  width: 150px;
+  margin: 0 35px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  border: none;
+  outline: none;
+  background: radial-gradient(circle at 20% 10%, rgb(219, 115, 249) 14.2% , rgb(6, 123, 239) 89.5%);
+  color: #fff;
   font-family: Comic Neue, sans-serif;
-  font-size: medium;
+  font-size: 17px;
+  cursor: pointer;
+}
+
+#start-btn:hover, #next-btn:hover {
+background: radial-gradient(circle at 10% 20%, rgb(6, 123, 239) 14.2%, rgb(219, 115, 249) 89.5%);
+z-index: 1;
+animation: glow 8s linear infinite;
+}
+
+@keyframes glow {
+  0% {
+    background-position: 0%;
+  }
+  100% {
+    background-position: 400%;
+  }
+}
+
+#start-btn::before, #next-btn::before {
+  content: "";
+  position: absolute;
+  background: inherit;
+  top: -5px;
+  right: -5px;
+  bottom: -5px;
+  left: -5px;
+  border-radius: 50px;
+  filter: blur(20px);
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+#start-btn:hover::before, #next-btn:hover::before {
+  opacity: 1;
+  z-index: -1;
 }
 
 #next-btn {
-  padding: 5px 24px;
-  border-radius: 10px;
-  font-family: Comic Neue, sans-serif;
-  font-size:medium;
   display: none;
 }
 
 #answers {
   display: grid;
   justify-content: center;
+  font-family: Comic Neue, sans-serif;
+  font-size: medium;
   grid-template-columns: 15% 15%;
   gap: 10px;
   padding: 5px;
@@ -64,7 +119,7 @@ h1 {
   cursor: pointer;
   transition: all 0.3s;
   font-family: Comic Neue, sans-serif;
-  font-size:medium;
+  font-size: medium;
 }
 .btn:hover {
   background-color: black;
@@ -72,6 +127,7 @@ h1 {
 }
 
 footer {
+color: black;
 position: fixed;
 bottom: 0;
 width: 100%;
