modification css pour centrer le bouton commencer le quiz + repositionnement du timer + mélange des questions lors du redémarrage du quiz, de façon à ne jamais commencer par la même question.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,7 +27,10 @@ h1 {
 
 #quiz {
   width: 700px;
-  height: 400px;
+  height: 450px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background: linear-gradient(180deg, #000000 0%, #b00f0f 100%);
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
   padding: 20px;
@@ -40,14 +43,14 @@ h1 {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 10px;
+  margin-top: 10px;
 }
 
 #start-btn, #next-btn {
   position: relative;
   height: 45px;
   width: 150px;
-  margin: 0 35px;
+  margin: 0px 35px;
   align-items: center;
   justify-content: center;
   border-radius: 50px;
@@ -104,7 +107,6 @@ animation: glow 8s linear infinite;
   grid-template-columns: 1fr 1fr; /* deux colonnes égales */
   gap: 15px;
   padding: 10px;
-  width: 100%;
 }
 
 /* not perfect but it works */
