--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.cdnfonts.com/css/new-walt-disney-font");
+@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap");
 
 html {
   height: 100%;
@@ -7,43 +8,117 @@ html {
 }
 
 body {
-  background: linear-gradient(180deg, #4769c8 0%, #312e81 100%);
-  color: #fdfdfd;
+  background: url("../assets/mickey-mouse.jpg");
   background-size: cover;
   display: flex;
   flex-direction: column;
   text-align: center;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Comic Neue, sans-serif;
 }
 
 h1 {
   font-family: "New Walt Disney Font", sans-serif;
   font-size: 70px;
+  color: black;
+  margin-top: 10px;
+  margin-bottom: 50px;
+  filter: drop-shadow(19px -11px 5px #c1cacd);
+}
+
+#quiz {
+  width: 700px;
+  height: 450px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: linear-gradient(180deg, #000000 0%, #b00f0f 100%);
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  align-self: center;
+  margin-top: 40px;
+  border-radius: 35px;
 }
 
 #actions {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 10px;
+  margin-top: 10px;
 }
-#start-btn {
-  padding: 5px 24px;
-  border-radius: 10px;
+
+#start-btn,
+#next-btn {
+  position: relative;
+  height: 45px;
+  width: 150px;
+  margin: 0px 35px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50px;
+  border: none;
+  outline: none;
+  background: radial-gradient(
+    circle at 20% 10%,
+    rgb(208, 130, 20) 14.2%,
+    rgb(239, 6, 88) 89.5%
+  );
+  color: #fff;
+  font-family: Comic Neue, sans-serif;
+  font-size: 17px;
+  cursor: pointer;
+}
+
+#start-btn:hover,
+#next-btn:hover {
+  background: radial-gradient(
+    circle at 10% 20%,
+    rgb(239, 6, 88) 14.2%,
+    rgb(208, 130, 20) 89.5%
+  );
+  z-index: 1;
+  animation: glow 8s linear infinite;
+}
+
+@keyframes glow {
+  0% {
+    background-position: 0%;
+  }
+  100% {
+    background-position: 400%;
+  }
+}
+
+#start-btn::before,
+#next-btn::before {
+  content: "";
+  position: absolute;
+  background: inherit;
+  top: -5px;
+  right: -5px;
+  bottom: -5px;
+  left: -5px;
+  border-radius: 50px;
+  filter: blur(20px);
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+#start-btn:hover::before,
+#next-btn:hover::before {
+  opacity: 1;
+  z-index: -1;
 }
 
 #next-btn {
-  padding: 5px 24px;
-  border-radius: 10px;
   display: none;
 }
 
 #answers {
   display: grid;
   justify-content: center;
-  grid-template-columns: 15% 15%;
-  gap: 10px;
-  padding: 5px;
+  grid-template-columns: 1fr 1fr; /* deux colonnes égales */
+  gap: 15px;
+  padding: 10px;
 }
 
 /* not perfect but it works */
@@ -53,12 +128,49 @@ h1 {
 
 .btn {
   border: 1px solid #312e81;
-  border-radius: 8px;
-  font-size: 15px;
+  border-radius: 12px;
+  padding: 15px;
+  font-family: "Comic Neue", sans-serif;
+  font-size: 18px;
   cursor: pointer;
   transition: all 0.3s;
+  width: 100%; /* pour que le bouton occupe toute la largeur de sa cellule */
+  background-color: white;
 }
 .btn:hover {
   background-color: black;
   color: #fff;
+  transform: scale(1.05);
+}
+
+footer {
+  color: black;
+  position: fixed;
+  bottom: 55px;
+  width: 100%;
+  font-size: small;
+}
+
+#question {
+  font-size: 20px;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+#timer {
+  font-size: 18px;
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+#feedback {
+  font-size: 22px;
+  color: #fff;
+  margin-top: 20px;
+}
+
+#score {
+  font-size: 24px;
+  color: #fff;
+  margin-top: 20px;
 }
